Updates to inference notebooks

--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -28,11 +28,9 @@ So far, the analysis notebooks have examined inverting the ELF have used non-lin
 import numpy as np
 import matplotlib.pyplot as plt
 from scipy import optimize
-from functools import partial
+import emcee
 from datetime import datetime
 
-import emcee 
-from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
@@ -45,7 +43,7 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Get the data
+# Get the average-atom data
 
 ```{code-cell} ipython3
 datafile = "../../data/external/Al-1 _vwf.txt"
@@ -104,7 +102,7 @@ def elfmodel(freq, params):
         )
 ```
 
-### Create ELF data with collision freq data
+### Create ELF data with the average-atom collision frequency data
 
 ```{code-cell} ipython3
 # true ELF data
@@ -127,6 +125,8 @@ plt.legend()
 ```
 
 # Define residual function
+
+Then, do a least squares fit of the ELF model to the ELF data by varying the parameters of the collision frequency model
 
 ```{code-cell} ipython3
 # setup
@@ -225,7 +225,7 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 32
-numsamples = 100
+numsamples = 15_000
 ```
 
 ```{code-cell} ipython3
@@ -233,7 +233,8 @@ numsamples = 100
 rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+# uncomment to run and potentially overwrite data
+# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
 ```
 
 # Read in MCMC data
@@ -244,6 +245,10 @@ flat_samples = flat_mcmc_samples(backend)
 ```
 
 # MCMC results
+
+## Markov chain tracings for each parameter
+
+Note there are multiple chains being plotted for each parameter, showing their paths in the 4D parameter space.
 
 ```{code-cell} ipython3
 plt.close()
@@ -265,6 +270,10 @@ for i in range(ndim):
 axes[-1].set_xlabel("step number");
 ```
 
+## Corner plot showing histograms of the samples from the posterior distribution
+
+The posterior is 4-dimensional (4 parameters), but the corner plot shows 1D and 2D slices through the full distribution (i.e. marginal distributions). The blue-dashed line shows the mean of the samples.
+
 ```{code-cell} ipython3
 import corner
 
@@ -278,6 +287,8 @@ corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color=
 
 # plt.savefig("../../reports/figures/mcmc_AAdata_corner")
 ```
+
+## Plot the collision frequency model using random samples of the parameters from MCMC
 
 ```{code-cell} ipython3
 # randomly pick 100 samples from our MCMC sampling data
@@ -307,6 +318,10 @@ plt.ylabel("collision freq [au]")
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_AAdata_collisionsamples")
 ```
+
+## Plot the ELF model using random samples of the (collision frequency) parameters from MCMC
+
+This uses the same random samples from the above plot.
 
 ```{code-cell} ipython3
 eps = Mermin(ElectronGas(t, d, dos_fn))
@@ -347,7 +362,7 @@ for ind in inds:
              "C1", 
              alpha=0.1)
 # plot data
-plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
+plt.plot(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
