--- a/notebooks/exploratory/5.15-twh-inference-model-data-absres.md
+++ b/notebooks/exploratory/5.15-twh-inference-model-data-absres.md
@@ -14,7 +14,7 @@ kernelspec:
 
 # Bayesian Inference with Markov Chain Monte Carlo: Ideal Dataset
 
-This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF data for this notebook is generated from our collision model _fit to Average Atom collision frequency data_. In other words, the collision frequency we are trying to find is exactly representable by our model, so we are testing the limits of the inversion process.
+This notebook is roughly identical with `5.1-twh-....ipynb` except that we use the absolute residual.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -70,7 +70,7 @@ AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -130,7 +130,7 @@ plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
-### Create ELF data with our collision frequency  model using the optimized parameters fit to mimic the average-atom collision frequency data
+### Create ELF data with our collision frequency  model using parameters fit to mimic the average atom collision frequency data
 
 ```{code-cell} ipython3
 # true ELF data
@@ -146,7 +146,7 @@ Do a least squares fit of the ELF model to the ELF data by varying the parameter
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="abs"
     )
 
 # initial parameter guesses
@@ -180,12 +180,22 @@ plt.ylim(1e-6)
 plt.legend()
 ```
 
+```{code-cell} ipython3
+plt.plot(freq_data, elf_data, c="C3", label="true")
+opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
+plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
+plt.ylabel("ELF [au]")
+plt.xlabel(r"$\hbar \omega$ [eV]")
+plt.xlim(0, 100)
+plt.legend()
+```
+
 # Perform MCMC
 
 Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
-lik_cutoff = 0.05
+lik_cutoff = 0.03
 prior_lims = [
     [0, 5],
     [0, 5],
@@ -199,7 +209,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualtype="rel"
+    residualtype="abs"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -211,7 +221,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - model data - rel. residual - 4 params - adaptive KK"
+dataset = "mcmc samples - model data - abs. residual"
 ```
 
 ```{code-cell} ipython3
@@ -225,14 +235,14 @@ runinfo = {
     "input data wavenumber [1/angstrom]" : wavenum,
     "collision freq model" : "collision_activate_decay, 4 parameters",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "residual" : "relative",
+    "residual" : "abs",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
 ndim = 4 # number of parameters
-numchains = 32
-numsamples = 15_000
+numchains = 8
+numsamples = 10_000
 ```
 
 ```{code-cell} ipython3
@@ -241,7 +251,7 @@ rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
 ```
 
 ```{code-cell} ipython3
@@ -330,7 +340,7 @@ plt.plot(freq_data,
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-# plt.ylim(1e-3)
+plt.ylim(1e-3)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
