--- a/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
+++ b/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
@@ -14,7 +14,7 @@ kernelspec:
 
 # Bayesian Inference with Markov Chain Monte Carlo: Ideal Dataset
 
-This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF data for this notebook is generated from our collision model _fit to Average Atom collision frequency data_. In other words, the collision frequency we are trying to find is exactly representable by our model, so we are testing the limits of the inversion process.
+This notebook is roughly identical with `5.1-twh-....ipynb` except that we consider data over a truncated range.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -28,11 +28,9 @@ This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF 
 import numpy as np
 import matplotlib.pyplot as plt
 from scipy import optimize
-from functools import partial
 from datetime import datetime
 
 import emcee 
-from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
@@ -69,8 +67,8 @@ AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
-# create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+# create a new, truncated frequency grid
+freq_data = np.linspace(2, 45, 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -121,7 +119,7 @@ popt_AAcoll, pcov = optimize.curve_fit(
 print(popt_AAcoll)
 
 # plot to compare
-plt.semilogx(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
+plt.plot(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
 plt.plot(freq_data, AAcoll.imag, c="C3", ls="--")
 plt.plot(freq_data, (modelcoll := collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll)).real, c="C0", label="opt")
 plt.plot(freq_data, modelcoll.imag, c="C0", ls="--")
@@ -130,7 +128,7 @@ plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
-### Create ELF data with our collision frequency  model using the optimized parameters fit to mimic the average-atom collision frequency data
+### Create ELF data with our collision frequency  model using parameters fit to mimic the average atom collision frequency data
 
 ```{code-cell} ipython3
 # true ELF data
@@ -149,11 +147,11 @@ def residual(params):
         elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
     )
 
-# initial parameter guesses
-initparams = (1, 1, 1, 1)
+# initial parameter guesses (this turns out to be important in here!)
+initparams = (0.1, 0.1, 0.1, 1)
 
 # optimization results
-optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
+optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf))
 ```
 
 ```{code-cell} ipython3
@@ -162,7 +160,7 @@ optresult
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real, c="C3", label="true")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real, c="C3", label="true")
 # optimized
 plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
@@ -171,12 +169,11 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, c="C3", label="true")
+plt.plot(freq_data, elf_data, c="C3", label="true")
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
-plt.ylim(1e-6)
 plt.legend()
 ```
 
@@ -185,7 +182,7 @@ plt.legend()
 Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
-lik_cutoff = 0.05
+lik_cutoff = 0.03
 prior_lims = [
     [0, 5],
     [0, 5],
@@ -211,7 +208,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - model data - rel. residual - 4 params - adaptive KK"
+dataset = "mcmc samples - truncated model data - rel. residual"
 ```
 
 ```{code-cell} ipython3
@@ -231,8 +228,8 @@ runinfo = {
 
 # sampler properties
 ndim = 4 # number of parameters
-numchains = 32
-numsamples = 15_000
+numchains = 8
+numsamples = 30_000
 ```
 
 ```{code-cell} ipython3
@@ -241,16 +238,7 @@ rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
-```
-
-```{code-cell} ipython3
-# # view attributes of dataset
-# with h5py.File(samplesfile, "a") as f:
-#     print(list(f.keys()))
-#     dset = f["mcmc_samples"]
-#     for attr in dset.attrs:
-#         print(f"{attr} : {dset.attrs[attr]}")
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
 ```
 
 # Read in MCMC data
@@ -313,7 +301,7 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(freq_data, 
+    plt.plot(freq_data, 
                collisionfreq(freq_data / AtomicUnits.energy, sample), 
                "C1", 
                 alpha=0.1
@@ -335,33 +323,40 @@ plt.legend()
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
+Let's use the same parameters but just extend the range of the plot to see the behavior away from the data.
+
+```{code-cell} ipython3
+# extend the range of the collision frequency
+freq_ext = np.geomspace(1e-2, 1e3, 200)
+for ind in inds:
+    sample = flat_samples[ind]
+    plt.semilogx(
+        freq_ext, 
+        collisionfreq(freq_ext / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
+
+# plot true collision frequency
+plt.plot(
+    freq_data,
+    collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real,
+    c="k",
+    label="true",
+    lw=2,
+    ls='--'
+)
+
+plt.xlabel(r"$\hbar\omega$ [eV]")
+plt.ylabel("collision freq [au]")
+# plt.ylim(1e-3)
+plt.legend()
+# plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
+```
+
 ## Plot the ELF model using random samples of the (collision frequency) parameters from MCMC
 
 This uses the same random samples from the above plot.
-
-```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
-# plot ELF for different parameters from MCMC sampling
-for ind in inds:
-    sample = flat_samples[ind]
-    plt.semilogx(freq_data,
-                 elec_loss_fn(
-                     eps,
-                     wavenum * AtomicUnits.length,
-                     freq_data / AtomicUnits.energy,
-                     lambda x: collisionfreq(x, sample)
-                 ), 
-                 "C1", 
-                 alpha=0.1)
-# plot data
-plt.loglog(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
-
-plt.ylabel("ELF [au]")
-plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylim(1e-6)
-plt.legend()
-# plt.savefig("../../reports/figures/mcmc_modeldata_ELFsamples")
-```
 
 ```{code-cell} ipython3
 eps = Mermin(ElectronGas(t, d, dos_fn))
@@ -382,7 +377,7 @@ plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.xlim(0, 100)
+
 plt.legend()
 ```
 
